jumping map bug fixed

--- a/style.scss
+++ b/style.scss
@@ -281,9 +281,12 @@ header {
 
   #interactiveMap {
     max-width: 100%;
-    height: auto;
     display: block;
-    position: relative;
+    position: sticky;
+    top: calc(#{$header-height} + 1rem);
+    height: fit-content;
+    align-self: flex-start;
+    z-index: 5;
   }
 
   // Hotspot styling (clickable points on the map)
